...
                    ),
                  ),
                ),
                const Gap(16),
                Expanded(
                  child: ElevatedButton.icon(
                    key: const Key('save_image_button'),
                    onPressed: previewState.isSaving
                        ? null
                        : () {
                            ref.read(previewViewModelProvider.notifier).saveImage(imageFile);
                          },
                    icon: const Icon(Icons.save),
...
